# mossco-python

./: .flake8  .gitignore  README.md  mypy.ini  noxfile.py  pyproject.toml
src/mossco_python/: console.py  wikipedia.py
tests/: conftest.py  test_console.py  test_wikipedia.py
