[tool.poetry]
name = "mossco-python"
version = "0.1.0"
authors = ["Carsten Lemmen <carsten.lemmen@hzg.de>"]
keywords = ["MOSSCO" ]
description = "Python tools for MOSSCO"
license = "GPL"
readme = "README.md"
homepage = "http://www.mossco.de"
repository = "https://github.com/platipodium/mossco-python"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
mossco-python = "mossco_python.console:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

