[tool.poetry]
name = "mossco-python"
version = "0.1.0"
authors = ["Carsten Lemmen <carsten.lemmen@hzg.de>"]
keywords = ["MOSSCO" ]
description = "Python tools for MOSSCO"
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "http://www.mossco.de"
documentation = "http://www.mossco.de/doc"
repository = "https://github.com/platipodium/mossco-python"
classifiers = [
  "Development Status :: 1 - Planning",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
  "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.24.0"
desert = "^2020.1.6"
marshmallow = "^3.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pytest-cov = "^2.10.0"
coverage = {version = "^5.1", extras = ["toml"]}
pytest-mock = "^3.1.1"
black = "^19.10b0"
flake8 = "^3.8.3"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.1.4"
flake8-import-order = "^0.18.1"
flake8-black = "^0.2.0"
safety = "^1.9.0"
mypy = "^0.782"
pytype = {version = "^2020.6.26", python = "3.7"}
typeguard = "^2.9.1"
flake8-annotations = "^2.1.0"

[tool.poetry.scripts]
mossco-python = "mossco_python.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["mossco_python"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
